--- a/flutter_zzz_blog/pubspec.yaml
+++ b/flutter_zzz_blog/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   flutter_markdown: ^0.6.2
+  markdown_widget: ^1.2.6-nullsafety
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,6 +49,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/md/flutter_anmation.md
+    - assets/datas/home.json
+    - assets/images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
