--- a/flutter_zzz_blog/pubspec.yaml
+++ b/flutter_zzz_blog/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_zzz_blog
+name: zzz_blog
 description: 个人博客
 
 # The following line prevents the package from being accidentally published to
