--- a/flutter_zzz_blog/pubspec.yaml
+++ b/flutter_zzz_blog/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/md/flutter_anmation.md
+    - assets/md/create_blog.md
     - assets/datas/home.json
     - assets/images/
 
