--- a/flutter_zzz_blog/pubspec.yaml
+++ b/flutter_zzz_blog/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.1.4
   flutter_markdown: ^0.6.2
   markdown_widget: ^1.2.6-nullsafety
+  provider: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,9 +48,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/md/flutter_anmation.md
-    - assets/md/create_blog.md
-    - assets/datas/home.json
+    - assets/md/
+    - assets/datas/
     - assets/images/
 
   #   - images/a_dot_ham.jpeg
