--- a/flutter_zzz_blog/pubspec.yaml
+++ b/flutter_zzz_blog/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_markdown: ^0.6.2
-  markdown_widget: ^1.2.6-nullsafety
+  markdown_widget: ^1.3.0+2
   provider: ^6.0.4
   go_router: 5.1.1
 dev_dependencies:
